--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 
             <div class="box">
                 <div class="image shine">
-                    <img src="images/blog-1.jpg" alt="">
+                    <img src="blog-1.jpg" alt="">
                     <h3>10 July 2023</h3>
                 </div>
                 <div class="content">
@@ -608,7 +608,7 @@
 
             <div class="box">
                 <div class="image shine">
-                    <img src="images/blog-2.jpg" alt="">
+                    <img src="blog-2.jpg" alt="">
                     <h3>15 May 2023</h3>
                 </div>
                 <div class="content">
@@ -626,7 +626,7 @@
 
             <div class="box">
                 <div class="image shine">
-                    <img src="images/blog-3.jpg" alt="">
+                    <img src="blog-3.jpg" alt="">
                     <h3>31 oct 2023</h3>
                 </div>
                 <div class="content">
@@ -654,7 +654,7 @@
         <h1 class="heading">contact us</h1>
         <div class="row">
             <div class="image">
-                <img src="images/contact.png" alt="">
+                <img src="contact.png" alt="">
             </div>
             <form id="contactForm">
                 <h3>send us a message</h3>
